[package]
name = "axum-util"
version = "0.2.0"
edition = "2021"
authors = ["Protryon <max.bruce12@gmail.com>"]
license = "Apache-2.0"
repository = "https://github.com/Protryon/axum-util"
description = "Misc utilities for axum (dynamic TLS, OIDC, logger, errors, CORS, and JWT auth)"
keywords = [ "axum", "misc", "util" ]

[dependencies]
axum = "0.6"
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
log = "0.4"
tokio = "1"
anyhow = "1.0"
http = "0.2"
http-body = "0.4"
tower-service = "0.3"
tower-layer = "0.3"
futures = "0.3"
pin-project = "1.0"
url = "2.4"
chrono = { version = "0.4", features = ["serde"] }
async-trait = "0.1"
indexmap = "1.9"
tokio-stream = "0.1"
hyper = "0.14"

prometheus = { version = "0.13.3", optional = true }

openid = { version = "0.11", optional = true }

jwt = { version = "0.16", optional = true }
hmac = { version = "0.12", optional = true }
sha2 = { version = "0.10", optional = true }

rustls = { version = "0.20", optional = true }
tokio-rustls = { version = "0.23", optional = true }

[features]
default = ["prometheus", "oidc", "auth", "tls"]
tls = ["rustls", "tokio-rustls"]
auth = ["dep:jwt", "hmac", "sha2"]
prometheus = ["dep:prometheus"]
oidc = ["openid"]